--- a/index.html
+++ b/index.html
@@ -56,7 +56,28 @@
 			<!--Intro-->
 			<div class="col-md-9">
 				<br>
-				<div id="top" class="">			
+				<div id="top" class="">
+
+					<div id="dasheconomicfreedom">
+						<h1>Index of Economic Freedom using Dash</h1>
+						<h3>27.09.2020 | dash, plotly, dash bootstrap components, pandas, heroku, iframe</h3>
+						<h2><p>The purpose of the excersise is to create a multi-tab dashboard showing the results of 2020 Index of Economic Freedom.
+						The index measures economic freedom of 186 countries based on trade freedom, business freedom, investment freedom, and property rights.</p>
+						<p>The dashboard:</p></h2>
+						<div class="resp-container">
+							<iframe class="resp-iframe" src="https://economicfreedomindex.herokuapp.com/"></iframe>
+						</div>
+						<h2>The app code:</h2>
+						<script src="https://gist.github.com/NeverTooLateToAutomate/eb90cc4b139a1c7daba536bb89ce0216.js"></script>
+						<h2>The css code:</h2>
+						<script src="https://gist.github.com/NeverTooLateToAutomate/de0d6bd0764d4bcacb3978c40d4d2352.js"></script>
+						<h2><p>The dataset for the excercise available on 
+						<a href="#https://github.com/NeverTooLateToAutomate/piotrjanus.io/tree/master/file"> Github</a>.</p>
+						<p>To find out how to publish your app on Heroku I recommned the following 
+						<a href="#https://youtu.be/vqVwpL4bGKY"> tutorial by Adam on the Charming Data channel</a>.</p></h2>
+						<br>
+					</div>
+				
 					<div id="climatechangepl">
 						<h1>Climate change in Poland</h1>
 						<h3>31.01.2020 | urllib.request, BeautifulSoup, pandas, zipfile, io, matplotlib, numpy</h3>
@@ -430,6 +451,7 @@
 				<br>
 				<div id="" class="list">
 					<h1>Projects</h1>
+						<h4><a href="#dasheconomicfreedom">Index of Economic Freedom</a></h4>
 						<h4><a href="#climatechangepl">Climate change in Poland</a></h4>
 						<h4><a href="#xmlelementtree">Tableau calc & param export</a></h4>
 						<h4><a href="#scrabbleassistant">Scrabble assistant</a></h4>
