--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 						<h2>The css code:</h2>
 						<script src="https://gist.github.com/NeverTooLateToAutomate/de0d6bd0764d4bcacb3978c40d4d2352.js"></script>
 						<h2><p>The dataset for the excercise available on 
-						<a href="#https://github.com/NeverTooLateToAutomate/piotrjanus.io/tree/master/file"> Github</a>.</p>
+						<a href="https://github.com/NeverTooLateToAutomate/piotrjanus.io/tree/master/file" target="_blank"> <b>Github</b></a>.</p>
 						<p>To find out how to publish your app on Heroku I recommned the following 
-						<a href="#https://youtu.be/vqVwpL4bGKY"> tutorial by Adam on the Charming Data channel</a>.</p></h2>
+						<a href="https://youtu.be/vqVwpL4bGKY" target="_blank"> <b>tutorial by Adam on the Charming Data channel</b></a>.</p></h2>
 						<br>
 					</div>
 				
@@ -306,8 +306,8 @@
 						<h2><p>The purpose of the excersise is to connect and query a postgreSQL database.</p>
 						<p>First, install PostgreSQL on your local system. 
 						Next, download and connect to the DVD rental database, which is a common sample database for PostgreSQL used for practice. 
-						Follow the instructions on the <a href="http://www.postgresqltutorial.com/postgresql-sample-database/">POSTGRESQL TUTORIAL</a> website to complete the above steps. 
-						Finally, install <a href="https://pypi.org/project/psycopg2/">psycopg2</a> package, e.g. in your Anaconda Prompt terminal.</p>
+						Follow the instructions on the <a href="http://www.postgresqltutorial.com/postgresql-sample-database/" target="_blank">POSTGRESQL TUTORIAL</a> website to complete the above steps. 
+						Finally, install <a href="https://pypi.org/project/psycopg2/" target="_blank">psycopg2</a> package, e.g. in your Anaconda Prompt terminal.</p>
 						<p><b>DVD Rental ER Model</b></p></h2>
 						<img src="img/python/printable-postgresql-sample-database-diagram.png" class="img-responsive" alt="">
 						<h2>Once all set up, use the following code to connect to the database:</h2>
