--- a/index3.html
+++ b/index3.html
@@ -63,10 +63,10 @@
 						<p>Download <a href="file/Northwind.bak" download style="color:#0e5051"><b>Northwind Database</b></a> - a sample database provided by Microsoft in early 2000. The Northwind database contains the sales data for a fictitious company called “Northwind Traders,” which imports and exports specialty foods from around the world.</p>
 						<img src="img/sql/Northwind.png" class="img-responsive" alt="">
 						<h2><p>Next, download and install <b>Microsoft® SQL Server®</b> - a relational database management system. <b>SQL Server 2019 Developer</b> Edition includes the same features as SQL Server Enterprise Edition, but is limited by the license to be only used as a development and test system, and not as production server.</p>
-						<p><a href="#https://www.microsoft.com/en-us/sql-server/sql-server-downloads">https://www.microsoft.com/en-us/sql-server/sql-server-downloads</a></p></h2>
+						<p><a href="https://www.microsoft.com/en-us/sql-server/sql-server-downloads" target="_blank">https://www.microsoft.com/en-us/sql-server/sql-server-downloads</a></p></h2>
 						<img src="img/sql/developer.png" class="img-responsive" alt="">
 						<h2><p>Download and install a tool for managing your SQL infrastructure - <b>SQL Server Management Studio (SSMS)</b>.</p>
-						<p><a href="#https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms?view=sql-server-ver15">https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms?view=sql-server-ver15</a></p></h2>
+						<p><a href="https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms?view=sql-server-ver15" target="_blank">https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms?view=sql-server-ver15</a></p></h2>
 						<img src="img/sql/ssms.png" class="img-responsive" alt="">
 						<h2>In the web you will find multiple tutorials if you face any difficulties during the installation process so I won't go deeper into that. Once the tools are installed start SSMS and type server name to connect. In my case it is: <b>localhost\SQLEXPRESS</b>.</h2>
 						<img src="img/sql/sqlserver.png" class="img-responsive" alt="">
@@ -6752,7 +6752,7 @@
 				
 				<div id="INDEX" class="macrooutersql">
 					<h1>INDEX</h1>
-					<h2><p>Following the <a href="#https://docs.microsoft.com/en-us/sql/relational-databases/indexes/clustered-and-nonclustered-indexes-described?view=sql-server-ver15">Microsoft</a> definitions:</p>
+					<h2><p>Following the <a href="https://docs.microsoft.com/en-us/sql/relational-databases/indexes/clustered-and-nonclustered-indexes-described?view=sql-server-ver15" target="_blank">Microsoft</a> definitions:</p>
 					<p><i>"Clustered indexes sort and store the data rows in the table or view based on their key values. These are the columns included in the index definition. There can be only one clustered index per table, because the data rows themselves can be stored in only one order."</i></p>
 					<p><i>"The only time the data rows in a table are stored in sorted order is when the table contains a clustered index. When a table has a clustered index, the table is called a clustered table. If a table has no clustered index, its data rows are stored in an unordered structure called a heap."</i></p>
 					<p><i>"Nonclustered indexes have a structure separate from the data rows. A nonclustered index contains the nonclustered index key values and each key value entry has a pointer to the data row that contains the key value."</i></p>
