--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<h2><p>The idea for the book came to my mind when I was studying the VBA language. At some point I felt that I covered a lot of theory, but I lacked practice. I started to invent more and more tasks myself. 
 						The more material I had, the more I considered making it useful to other VBA adepts. I wrote to Helion, a popular IT publishing house in Poland, and they were happy to publish it as a book. 
 						Working with Helion on the final product was a great adventure and a real pleasure.</p>
-						<p>VBA na sto dwa, czyli 102 ćwiczenia z wykorzystaniem VBA appeared in bookshops Jan 2021. As of today, over 500 copies were sold. It is something I am really proud of.</p>
+						<p>VBA na sto dwa, czyli 102 ćwiczenia z wykorzystaniem VBA appeared in bookshops Jan 2021. So far over 500 copies have been sold. It is something I am really proud of.</p>
 						<p>Recently, I found the book on a shelf in Empik - a popular polish bookshop:</p></h2>
 						<img src="img/photo/empik1.jpg" class="img-responsive" alt="">
 						<br>
@@ -490,7 +490,7 @@
 				<div id="" class="list">
 					<h1>Projects</h1>
 						<h4><a href="#prepinsas">Superstore flow in SAS</a></h4>
-						<h4><a href="#vbana102">book: VBA na 102</a></h4>
+						<h4><a href="#vbana102">Book: VBA na 102</a></h4>
 						<h4><a href="#dasheconomicfreedom">Index of Economic Freedom</a></h4>
 						<h4><a href="#climatechangepl">Climate change in Poland</a></h4>
 						<h4><a href="#xmlelementtree">Tableau calc & param export</a></h4>
