--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 						<script src="https://gist.github.com/NeverTooLateToAutomate/aa096bf01773abca36a4ec45f6f8b0b8.js"></script>
 						<h2>SAS Studio PROC SQL queries:</h2>
 						<script src="https://gist.github.com/NeverTooLateToAutomate/a775e54425b082bf04fd86bfcafe9eb8.js"></script>
+						<h2>Results in form of chart and summary table:</h2>
+						<script src="https://gist.github.com/NeverTooLateToAutomate/4caf5218e9eecccd5e38bb4a3622abf7.js"></script>
+						<img src="img/sas/sas_viz.png" class="img-responsive" alt="">						
 						<br>
 						<br>
 					</div>
