--- a/index.html
+++ b/index.html
@@ -57,15 +57,35 @@
 			<div class="col-md-9">
 				<br>
 				<div id="top" class="">
+
+					<div id="gitversioncontrol">
+						<h1>Updating my website on GitHub using Git</h1>
+						<h3>1.1.2023 | Git, GitHub, Command Prompt</h3>			
+						<h2>I host my website on GitHub. When I add a new post I use Command Prompt and Git commands to do the updates. The following code consists of the following actions:
+						<ul>
+							<li>create local repo of the GitHub repo</li>
+							<li>create a new branch and switch to it</li>
+							<li>copy new files to relevant folders</li>
+							<li>add to staging area, commit changes</li>
+							<li>merge new branch with master branch</li>
+							<li>push changes to GitHub</li>
+							<li>delete local repo</li>
+						</ul></h2>
+						<script src="https://gist.github.com/NeverTooLateToAutomate/799bb0dd78a08d8cc62f0a466e09f252.js"></script>					
+						<br>
+						<br>
+					</div>
+
+
 					
 					<div id="prepinsas">
 						<h1>Superstore flow in SAS</h1>
 						<h3>25.10.2022 | Tableau Prep Builder, SAS Studio in SAS OnDemand for Academics</h3>			
 						<h2><p>Tableau Prep Builder comes with a tutorial that walks you through creating a flow for Sample Superstore. 
 						It introduces you to the common operations that are available in program.</p>
-						<p>Tableau Prep's Superstore flow:</p></h2>
+						<p>Tableau Prep's Superstore flow:</p>
 						<p>The purpose of the excercise was to recreate the Prep's tutorial flow using SAS Studio doing it both Non-SQL Base SAS and PROC SQL way.</p>
-						<p>All the source files were imported to a library called SUPSFLOW</p>
+						<p>All the source files were imported to a library called SUPSFLOW</p></h2>
 						<img src="img/sas/superstore_flow.png" class="img-responsive" alt="">
 						<h2>SAS Studio DATA and PROC steps:</h2>
 						<script src="https://gist.github.com/NeverTooLateToAutomate/aa096bf01773abca36a4ec45f6f8b0b8.js"></script>
@@ -102,10 +122,10 @@
 						<h3>27.09.2020 | dash, plotly, dash bootstrap components, pandas, heroku, iframe</h3>
 						<h2><p>The purpose of the excersise is to create a multi-tab dashboard showing the results of 2020 Index of Economic Freedom.
 						The index measures economic freedom of 186 countries based on trade freedom, business freedom, investment freedom, and property rights.</p>
-						<p>The dashboard:</p></h2>
+						<!--<p>The dashboard:</p></h2>
 						<div class="resp-container">
 							<iframe class="resp-iframe" src="https://economicfreedomindex.herokuapp.com/"></iframe>
-						</div>
+						</div>-->
 						<h2>The app code:</h2>
 						<script src="https://gist.github.com/NeverTooLateToAutomate/eb90cc4b139a1c7daba536bb89ce0216.js"></script>
 						<h2>The css code:</h2>
@@ -492,6 +512,7 @@
 				<br>
 				<div id="" class="list">
 					<h1>Projects</h1>
+						<h4><a href="#gitversioncontrol">Website update by Git</a></h4>
 						<h4><a href="#prepinsas">Superstore flow in SAS</a></h4>
 						<h4><a href="#vbana102">Book: VBA na 102</a></h4>
 						<h4><a href="#dasheconomicfreedom">Index of Economic Freedom</a></h4>
