--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 							<li>push changes to GitHub</li>
 							<li>delete local repo</li>
 						</ul></h2>
-						<script src="https://gist.github.com/NeverTooLateToAutomate/799bb0dd78a08d8cc62f0a466e09f252.js"></script>					
+						<!--<script src="https://gist.github.com/NeverTooLateToAutomate/799bb0dd78a08d8cc62f0a466e09f252.js"></script>-->
+						<iframe src="dark_gist.html" width="100%" height="3055px" style="border:none;"></iframe>
 						<br>
 						<br>
 					</div>
